--- a/index.html
+++ b/index.html
@@ -392,19 +392,20 @@
             top: 0;
             left: 0;
             right: 0;
-            background: #ef4444;
+            background: #b91c1c;
             color: white;
-            padding: 0.75rem;
+            padding: 0.875rem;
             text-align: center;
-            font-weight: bold;
-            font-size: 1rem;
+            font-weight: 900;
+            font-size: 1.125rem;
             z-index: 1000;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 4px 15px rgba(185, 28, 28, 0.5);
         }
 
         .countdown-timer {
-            font-size: 1.25rem;
+            font-size: 1.375rem;
             margin-left: 0.5rem;
+            font-weight: 900;
         }
 
         body {
@@ -415,7 +416,7 @@
 <body>
     <!-- Countdown Banner -->
     <div class="countdown-banner" id="countdown-banner">
-        <span id="countdown-text">A oferta expira em</span>
+        <span id="countdown-text">⚠️ Esta oferta expira em</span>
         <span class="countdown-timer" id="countdown-timer">10:00</span>
     </div>
 
@@ -817,7 +818,7 @@
 
                 if (timeLeft <= 0) {
                     clearInterval(timerInterval);
-                    document.getElementById('countdown-text').textContent = 'Oferta Encerrada';
+                    document.getElementById('countdown-text').textContent = '⚠️ Oferta Encerrada';
                     document.getElementById('countdown-timer').style.display = 'none';
 
                     const buttons = document.querySelectorAll('.btn-primary');
