--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="product-header">
             <img src="/img/ptoduto.png" alt="Produto" class="product-image">
             <div class="product-info">
-                <h1>Produto Teste</h1>
+                <h1>SPOTFY PAY ® - TAXA ANTI-FRAUDE</h1>
                 <div class="product-price">197 MZN</div>
             </div>
         </div>
