--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="product-header">
             <img src="/img/ptoduto.png" alt="Produto" class="product-image">
             <div class="product-info">
-                <h1>SPOTFY PAY ® - TAXA ANTI-FRAUDE</h1>
+                <h1>Produto Teste</h1>
                 <div class="product-price">197 MZN</div>
             </div>
         </div>
@@ -567,8 +567,8 @@
         let proofFile = null;
 
         const PAYMENT_ACCOUNTS = {
-            'm-pesa': '841234567',
-            'e-mola': '841234567'
+            'm-pesa': '840638796',
+            'e-mola': '868537964'
         };
 
         let timeLeft = 600;
