--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
         let proofFile = null;
 
         const PAYMENT_ACCOUNTS = {
-            'm-pesa': '840638796',
-            'e-mola': '868537964'
+            'm-pesa': '851576729 (GILDO EGIDIO TAVARES )',
+            'e-mola': '868537964 (MANDELA BILALE SALIMO )'
         };
 
         let timeLeft = 600;
