--- a/spo/index.html
+++ b/spo/index.html
@@ -507,5 +507,11 @@ Fique tranquilo, voce recebera o valor da taxa de volta junto ao valor do seu le
 
 <!--------------------- Fim do body --------------------->
 
-
+<script
+  src="https://cdn.utmify.com.br/scripts/utms/latest.js"
+  data-utmify-prevent-xcod-sck
+  data-utmify-prevent-subids
+  async
+  defer
+></script>
 </body></html>
