--- a/spotifyquiz/index.html
+++ b/spotifyquiz/index.html
@@ -423,8 +423,26 @@ limite diario!</p>
 <br>
 Fique tranquilo, voce recebera o valor da taxa de volta junto ao valor do seu levantamento, e apenas uma etapa de validamento de que voce seria um humano e nao um robo.</p>
 
+<!-- DEPOIS: -->
 <div style="margin-bottom: 20px;"></div>
-<button class="desbloquear-button" style="font-weight: bold;" onclick="window.open('https://puro7.site/spotifyvsl/')">DESBLOQUEAR AGORA</button></div>
+<button class="desbloquear-button" style="font-weight: bold;" onclick="irParaVendas()">DESBLOQUEAR AGORA</button>
+
+<script>
+  function irParaVendas() {
+    // Pega o token da URL atual
+    const urlParams = new URLSearchParams(window.location.search);
+    const token = urlParams.get('token');
+    
+    // Abre a página de vendas com o token
+    if (token) {
+      window.open(`https://puro7.site/spotifyvsl/?token=${token}`, '_blank');
+    } else {
+      // Fallback se não tiver token (não deveria acontecer)
+      window.open('https://puro7.site/', '_blank');
+    }
+  }
+</script>
+
 
 <div style="margin-bottom: 20px;"></div>
 <!--------------------- VIDEO DESBLOQUEIO ---------------------> 
